login with jwt
